ros2_study/log/build_2025-11-12_14-52-15/my_first_package/stderr.log
  File "/home/hyh/ros2_study/install/my_first_package/lib/python3.10/site-packages/my_first_package/dist_turtle_action_server.py", line 41
    		self.add_on_set_parameters_callback9self.parameter_callback)
    		                                                           ^
SyntaxError: unmatched ')'

